--- a/apps/sigma/project.json
+++ b/apps/sigma/project.json
@@ -10,7 +10,7 @@
       "executor": "@angular-devkit/build-angular:browser",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/apps/sigma",
+        "outputPath": "dist/apps/sigma/browser",
         "index": "apps/sigma/src/index.html",
         "main": "apps/sigma/src/main.ts",
         "polyfills": ["zone.js"],
@@ -53,7 +53,8 @@
           "browserTarget": "sigma:build:production"
         },
         "development": {
-          "browserTarget": "sigma:build:development"
+          "browserTarget": "sigma:build:development",
+          "open": true
         }
       },
       "defaultConfiguration": "development"
@@ -90,6 +91,59 @@
       "options": {
         "buildTarget": "sigma:build"
       }
+    },
+    "server": {
+      "dependsOn": ["build"],
+      "executor": "@angular-devkit/build-angular:server",
+      "options": {
+        "outputPath": "dist/apps/sigma/server",
+        "main": "apps/sigma/server.ts",
+        "tsConfig": "apps/sigma/tsconfig.server.json"
+      },
+      "configurations": {
+        "production": {
+          "outputHashing": "media"
+        },
+        "development": {
+          "buildOptimizer": false,
+          "optimization": false,
+          "sourceMap": true,
+          "extractLicenses": false,
+          "vendorChunk": true
+        }
+      },
+      "defaultConfiguration": "production"
+    },
+    "serve-ssr": {
+      "executor": "@nguniversal/builders:ssr-dev-server",
+      "configurations": {
+        "development": {
+          "browserTarget": "sigma:build:development",
+          "serverTarget": "sigma:server:development"
+        },
+        "production": {
+          "browserTarget": "sigma:build:production",
+          "serverTarget": "sigma:server:production"
+        }
+      },
+      "defaultConfiguration": "development"
+    },
+    "prerender": {
+      "executor": "@nguniversal/builders:prerender",
+      "options": {
+        "routes": ["/"]
+      },
+      "configurations": {
+        "development": {
+          "browserTarget": "sigma:build:development",
+          "serverTarget": "sigma:server:development"
+        },
+        "production": {
+          "browserTarget": "sigma:build:production",
+          "serverTarget": "sigma:server:production"
+        }
+      },
+      "defaultConfiguration": "production"
     }
   }
 }
