--- a/package.json
+++ b/package.json
@@ -2,18 +2,25 @@
   "name": "@sigma-nx/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "npx nx run-many --target=serve"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~16.0.0",
+    "@angular/cdk": "^16.1.0-next.0",
     "@angular/common": "~16.0.0",
     "@angular/compiler": "~16.0.0",
     "@angular/core": "~16.0.0",
     "@angular/forms": "~16.0.0",
+    "@angular/material": "^16.1.0-next.0",
     "@angular/platform-browser": "~16.0.0",
     "@angular/platform-browser-dynamic": "~16.0.0",
+    "@angular/platform-server": "~16.0.0",
     "@angular/router": "~16.0.0",
+    "@nguniversal/express-engine": "~16.0.0",
     "@nx/angular": "16.2.2",
+    "ngx-mask": "^13.1.15",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -28,6 +35,7 @@
     "@angular/cli": "~16.0.0",
     "@angular/compiler-cli": "~16.0.0",
     "@angular/language-service": "~16.0.0",
+    "@nguniversal/builders": "~16.0.0",
     "@nx/cypress": "16.2.2",
     "@nx/eslint-plugin": "16.2.2",
     "@nx/jest": "16.2.2",
