--- a/apps/sigma/tsconfig.editor.json
+++ b/apps/sigma/tsconfig.editor.json
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "../../libs/material/src/lib/disable-toggle.directive.ts"],
   "compilerOptions": {
     "types": ["jest", "node"]
   }
