--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -13,11 +13,12 @@
     "lib": ["es2020", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
+    "types": ["node"],
     "baseUrl": ".",
     "paths": {
       "@core/*": ["apps/sigma/src/app/core/*"],
       "@directives/*": ["apps/sigma/src/app/shared/directives/*"],
-      "@environments/*": ["environments/*"],
+      "@environments/*": ["apps/sigma/src/environments/*"],
       "@helpers/*": ["apps/sigma/src/app/shared/helpers/*"],
       "@layout/*": ["apps/sigma/src/app/core/layout/*"],
       "@pipes/*": ["apps/sigma/src/app/shared/pipes/*"],
@@ -25,11 +26,12 @@
       "@sigma-nx/administrativo/usuarios": [
         "libs/administrativo/usuarios/src/index.ts"
       ],
+      "@sigma-nx/components/input": ["libs/components/input/src/index.ts"],
+      "@sigma-nx/components/shared": ["libs/components/shared/src/index.ts"],
       "@sigma-nx/material": ["libs/material/src/index.ts"],
       "@sigma-nx/services/http": ["libs/services/http/src/index.ts"],
-      "@sigma-nx/shared/http": ["libs/shared/http/src/index.ts"],
-      "@sigma-nx/ui": ["libs/ui/src/index.ts"],
-      "@types/*": ["apps/sigma/src/app/shared/types/*"]
+      "@types/*": ["apps/sigma/src/app/shared/types/*"],
+      "http/table": ["libs/components/input/table/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
