--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,29 +10,61 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "esnext",
-    "lib": ["es2020", "dom"],
+    "lib": [
+      "es2020",
+      "dom"
+    ],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
-    "types": ["node"],
+    "types": [
+      "node"
+    ],
     "baseUrl": ".",
     "paths": {
-      "@core/*": ["apps/sigma/src/app/core/*"],
-      "@directives/*": ["apps/sigma/src/app/shared/directives/*"],
-      "@environments/*": ["apps/sigma/src/environments/*"],
-      "@helpers/*": ["apps/sigma/src/app/shared/helpers/*"],
-      "@layout/*": ["apps/sigma/src/app/core/layout/*"],
-      "@pipes/*": ["apps/sigma/src/app/shared/pipes/*"],
-      "@shared/*": ["apps/sigma/src/app/shared/*"],
+      "@core/*": [
+        "apps/sigma/src/app/core/*"
+      ],
+      "@directives/*": [
+        "apps/sigma/src/app/shared/directives/*"
+      ],
+      "@environments/*": [
+        "apps/sigma/src/environments/*"
+      ],
+      "@helpers/*": [
+        "apps/sigma/src/app/shared/helpers/*"
+      ],
+      "@layout/*": [
+        "apps/sigma/src/app/core/layout/*"
+      ],
+      "@pipes/*": [
+        "apps/sigma/src/app/shared/pipes/*"
+      ],
+      "@shared/*": [
+        "apps/sigma/src/app/shared/*"
+      ],
       "@sigma-nx/administrativo/usuarios": [
         "libs/administrativo/usuarios/src/index.ts"
       ],
-      "@sigma-nx/components/input": ["libs/components/input/src/index.ts"],
-      "@sigma-nx/components/shared": ["libs/components/shared/src/index.ts"],
+      "@sigma-nx/components": [
+        "libs/components/src/index.ts"
+      ],
+      "@sigma-nx/components/input": [
+        "libs/components/input/src/index.ts"
+      ],
+      "@sigma-nx/components/table": [
+        "libs/components/table/src/index.ts"
+      ],
+      "@sigma-nx/services/http": [
+        "libs/services/http/src/index.ts"
+      ],
       "@sigma-nx/material": ["libs/material/src/index.ts"],
-      "@sigma-nx/services/http": ["libs/services/http/src/index.ts"],
-      "@types/*": ["apps/sigma/src/app/shared/types/*"],
-      "http/table": ["libs/components/input/table/src/index.ts"]
+      "@types/*": [
+        "apps/sigma/src/app/shared/types/*"
+      ],
     }
   },
-  "exclude": ["node_modules", "tmp"]
+  "exclude": [
+    "node_modules",
+    "tmp"
+  ]
 }
