exportação modal e isolamento departamento

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -41,6 +41,7 @@
       "@sigma-nx/components/table": ["libs/components/table/src/index.ts"],
       "@sigma-nx/material": ["libs/material/src/index.ts"],
       "@sigma-nx/services/http": ["libs/services/http/src/index.ts"],
+      "@sigma-nx/services/modal": ["libs/services/modal/src/index.ts"],
       "@types/*": ["apps/sigma/src/app/shared/types/*"]
     }
   },
