separação de arquivos e build ok

--- a/nx.json
+++ b/nx.json
@@ -31,6 +31,11 @@
       ]
     }
   },
+  "pluginsConfig": {
+    "@nrwl/js": {
+      "analyzeSourceFiles": true
+    }
+  },
   "namedInputs": {
     "default": ["{projectRoot}/**/*", "sharedGlobals"],
     "production": [
