--- a/libs/components/tsconfig.lib.json
+++ b/libs/components/tsconfig.lib.json
@@ -5,8 +5,8 @@
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
-    "types": []
+    "types": ["node"]
   },
   "exclude": ["src/**/*.spec.ts", "jest.config.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts","../*"]
+  "include": ["src/**/*.ts"]
 }
