--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -48,6 +48,7 @@
       "@sigma-nx/material": ["libs/material/src/index.ts"],
       "@sigma-nx/services/http": ["libs/services/http/src/index.ts"],
       "@sigma-nx/services/modal": ["libs/services/modal/src/index.ts"],
+      "@sigma-nx/shared": ["libs/shared/src/index.ts"],
       "@types/*": ["apps/sigma/src/app/shared/types/*"]
     }
   },
