--- a/libs/administrativo/departamentos/project.json
+++ b/libs/administrativo/departamentos/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "administrativo-departamentos",
+  "name": "departamentos",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/administrativo/departamentos/src",
   "prefix": "sigma-nx",
