--- a/libs/controle-requisitos/aplicabilidade/project.json
+++ b/libs/controle-requisitos/aplicabilidade/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "controle-requisitos-aplicabilidade",
+  "name": "aplicabilidade",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/controle-requisitos/aplicabilidade/src",
   "prefix": "sigma-nx",
