--- a/libs/monitoramento-licencas/tipo-documento/project.json
+++ b/libs/monitoramento-licencas/tipo-documento/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "monitoramento-licencas-tipo-documento",
+  "name": "tipo-documento",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/monitoramento-licencas/tipo-documento/src",
   "prefix": "sigma-nx",
