--- a/apps/sigma/project.json
+++ b/apps/sigma/project.json
@@ -57,7 +57,10 @@
           "open": true
         }
       },
-      "defaultConfiguration": "development"
+      "defaultConfiguration": "development",
+      "options": {
+        "proxyConfig": "apps/sigma/proxy.conf.json"
+      }
     },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
