--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
     "@angular/platform-browser-dynamic": "~16.0.0",
     "@angular/platform-server": "~16.0.0",
     "@angular/router": "~16.0.0",
+    "@nestjs/common": "^9.1.1",
+    "@nestjs/core": "^9.1.1",
+    "@nestjs/platform-express": "^9.1.1",
     "@nguniversal/express-engine": "~16.0.0",
     "@nx/angular": "16.2.2",
+    "axios": "^1.0.0",
     "ngx-mask": "^13.1.15",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -35,13 +40,18 @@
     "@angular/cli": "~16.0.0",
     "@angular/compiler-cli": "~16.0.0",
     "@angular/language-service": "~16.0.0",
+    "@nestjs/schematics": "^9.1.0",
+    "@nestjs/testing": "^9.1.1",
     "@nguniversal/builders": "~16.0.0",
     "@nx/cypress": "16.2.2",
     "@nx/eslint-plugin": "16.2.2",
     "@nx/jest": "16.2.2",
     "@nx/js": "16.2.2",
     "@nx/linter": "16.2.2",
+    "@nx/nest": "16.2.2",
+    "@nx/node": "16.2.2",
     "@nx/web": "16.2.2",
+    "@nx/webpack": "16.2.2",
     "@nx/workspace": "16.2.2",
     "@schematics/angular": "~16.0.0",
     "@types/jest": "^29.4.0",
@@ -54,6 +64,7 @@
     "eslint-plugin-cypress": "^2.10.3",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~13.1.0",
     "ng-packagr": "~16.0.0",
     "nx": "16.2.2",
