--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@angular/platform-browser-dynamic": "~16.0.0",
     "@angular/platform-server": "~16.0.0",
     "@angular/router": "~16.0.0",
+    "@fastify/compress": "^6.4.0",
     "@nestjs/common": "^9.1.1",
     "@nestjs/core": "^9.1.1",
     "@nestjs/platform-express": "^9.1.1",
+    "@nestjs/platform-fastify": "^9.4.2",
     "@nguniversal/express-engine": "~16.0.0",
     "@nx/angular": "16.2.2",
     "axios": "^1.0.0",
+    "compression": "^1.7.4",
     "ngx-mask": "^13.1.15",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
